--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,12 +1,36 @@
 {% extends 'blog/base.html' %}
 
+{% load static %}
 {% block content %}
+
+<img src="{% static 'img/photo_1.jpg' %}" width="300px" height="auto">
+
+
 <h1>Главная страница</h1>
-{% for post in posts %}
-    <p><h3>{{ post.author }}</h3></p>
-    <p>{{ post.title }}</p>
-    <p>{{ post.text }}</p>
-    <p><i>{{ post.created_at }}</i></p>
-{% endfor %}
+<div class="post-list">
+    {% for post in posts %}
+        <div class="post-item">
+            <div class="post-image">
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" width="200px" height="auto">
+                {% else %}
+                    <img src="{% static 'img/no_photo.jpg'%}" width="150px" height="auto">
+                {% endif %}
+            </div>
+            <div class="post-author">
+                {{ post.author }}
+            </div>
+            <div class="post-title">
+                <a href="{% url 'blog:read_post' pk=post.pk %}">{{ post.title }}</a>
+            </div>
+            <div class="post-text">
+                {{ post.text }}
+            </div>
+            <div class="post-created_at">
+                {{ post.created_at }}
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock content %}
