--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,12 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<h2>Добавить новое объявление</h2>
+<h2>Редактировать объявление</h2>
 
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button   type="submit">Добавить объявление</button>
+    <button   type="submit">Изменить объявление</button>
 </form>
 
 {% endblock content %}
