--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,6 +14,18 @@
 
 {{ post.text }}
 <p><i>{{ post.created_at }}</i></p>
+<div class="btn-actions">
+    <div class="btn-edit-post">
+        <a href="{% url 'blog:update_post' pk=post.id %}">
+            <button type="button">Редактировать</button>
+        </a>
+    </div>
+    <div class="btn-del-post">
+        <a href="{% url 'blog:delete_post' pk=post.id %}">
+            <button type="button">Удалить</button>
+        </a>
+    </div>
+</div>
 
 
 
