--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,7 +21,7 @@
                 {{ post.author }}
             </div>
             <div class="post-title">
-                <a href="{% url 'blog:read_post' pk=post.pk %}">{{ post.title }}</a>
+                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
             </div>
             <div class="post-text">
                 {{ post.text }}
