--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,10 +25,10 @@
           <a class="nav-link" href="{% url 'blog:about' %}">О сайте</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">...</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">...</a>
         </li>
       </ul>
     </div>
