--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,6 +30,23 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">...</a>
         </li>
+        <li class="nav-item dropdown">
+
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Аккаунт
+          </a>
+          <ul class="dropdown-menu">
+            {% if not user.is_authenticated %}
+            <li><a class="dropdown-item" href="{% url 'users:register' %}">Регистрация</a></li>
+            <li><a class="dropdown-item" href="{% url 'users:login' %}">Войти</a></li>
+            <li><hr class="dropdown-divider"></li>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <li><a class="dropdown-item" href="{% url 'users:logout' %}">Выйти</a></li>
+            <li><a class="dropdown-item" href="{% url 'users:detail' pk=user.pk %}">{{ user.username }}</a></li>
+            {% endif %}
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
