--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,4 +2,7 @@
 
 {% block content %}
 <h1>О сайте</h1>
+<h3>
+    На сайте объявлений <span>{{ count_posts }}</span> постов.
+</h3>
 {% endblock content %}
