--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,7 +8,7 @@
 
 <h1>Главная страница</h1>
 <div class="post-list">
-    {% for post in posts %}
+    {% for post in page_obj %}
         <div class="post-item">
             <div class="post-image">
                 {% if post.image %}
@@ -31,6 +31,21 @@
             </div>
         </div>
     {% endfor %}
+</div>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo;Первая</a>
+            <a href="?page={{ page_obj.previous_page_number }}">&laquo;Предыдущая</a>
+        {% endif %}
+        <span class="current">
+            Страница {{ page-obj.number }} из {{ page_obj.paginator.num_page }}
+        </span>
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Следующая</a>
+            <a href="?page={{ page_obj.paginator.num_page }}">Последняя&raquo;</a>
+        {% endif %}
+    </span>
 </div>
 
 {% endblock content %}
