--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,6 +14,8 @@
 
 {{ post.text }}
 <p><i>{{ post.created_at }}</i></p>
+
+{% if user == post.author %}
 <div class="btn-actions">
     <div class="btn-edit-post">
         <a href="{% url 'blog:update_post' pk=post.id %}">
@@ -25,6 +27,7 @@
             <button type="button">Удалить</button>
         </a>
     </div>
+{% endif %}
 </div>
 
 
