--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'users/base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+<h2>Пожалуйста, войдите на сайт</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Войти</button>
+</form>
+
+{% endblock content %}
