--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -51,6 +51,13 @@
     </div>
   </div>
 </nav>
+
+{% if messages %}
+    {% for message in messages %}
+      <div>{{ message }}</div>
+    {% endfor %}
+{% endif %}
+
 {% block content %}
 {% endblock content %}
 </body>
