--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -39,7 +39,7 @@
             <a href="?page={{ page_obj.previous_page_number }}">&laquo;Предыдущая</a>
         {% endif %}
         <span class="current">
-            Страница {{ page-obj.number }} из {{ page_obj.paginator.num_page }}
+            Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
         </span>
         {% if page_obj.has_next %}
             <a href="?page={{ page_obj.next_page_number }}">Следующая</a>
