--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
 
@@ -12,7 +12,7 @@
 <hr>
 <div>Дата регистрации - {{ user.date_joined|date:'d-m-Y H:i'}}</div>
 
-<a href="{% url users:'change_password' %}">
+<a href="{% url 'users:change_password' %}">
    <button type="submit">Сменить пароль</button>
 </a>
 
