--- a/blog/templates/blog/403.html
+++ b/blog/templates/blog/403.html
@@ -5,6 +5,8 @@
 <h1>403</h1>
 <h2>Доступ запрещён</h2>
 
+<img src="{% static 'img/403.jpg'%}" width="150px" height="auto">
+
 
 
 {% endblock content %}
