--- a/blog/templates/blog/500.html
+++ b/blog/templates/blog/500.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>500</h1>
 <h2>Ошибка на стороне сервера</h2>
-
+<img src="{% static 'img/500.jpg'%}" width="150px" height="auto">
 
 
 {% endblock content %}
