--- a/blog/templates/blog/404.html
+++ b/blog/templates/blog/404.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 <h1>404</h1>
-<h2>Страница не найдена</h2>
+<div class="error-404">
+    <h2>Страница не найдена</h2>
 
-
+    <img src="{% static 'img/404.jpg' %}" width="150px" height="auto">
+</div>
 
 {% endblock content %}
