--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,11 +18,28 @@ body {
 .post-item {
     display: flex;
     flex-direction: column;
+    width: 30%;
+    border-radius: 20px 20px 20px 20px;
+    background-color: #91d2c8;
+
 }
 
 .post-list {
     display: flex;
     justify-content: center;
     gap: 50px;
+
 }
+
+.post-image {
+    border-radius: 10px 10px 10px 10px;
+}
+
+.error-404 {
+    background-color: #91d2c8;
+}
+
+
+
+
 
