--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -59,6 +59,13 @@
 {% endif %}
 
 {% block content %}
+<div class="base-body">
+
+</div>
 {% endblock content %}
 </body>
+
+<footer>
+  &copy;Bboard
+</footer>
 </html>
