--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,19 +1,14 @@
+
+
 body {
-   	   background: 	#000000;
-	   color: #fff;
+   	   background-image: url('blog/static/img/photo_1.jpg');
+       background-size: auto;
    }
-   a {
-   color: #808000
-   }
-   h1 {
-   color: #008080
-   }
-   p {
-   color: #008000
-   }
-   ol {
-   color: #008000
-   }
+
+.base-body {
+    background-image: url('img/photo_1.jpg');
+    background-size: auto;
+}
 
 .post-item {
     display: flex;
