--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,9 +2,17 @@
 {% load static %}
 
 {% block content %}
+
 <h3>Информация об объявлении № {{ post.pk }}</h3>
 <hr>
-{{ post.author }}
+{% if user.is_authenticated %}
+<a href="{% url 'blog:user_info' user_id=post.author.pk %}">
+    {{ post.author }}
+</a>
+{% else %}
+    {{ post.author }}
+{% endif %}
+
 <h4>{{ post.title }}</h4>
 {% if post.image %}
 <p><img src="{{ post.image.url }}" width="300px" height="auto"></p>
