--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,70 +1,80 @@
 {% extends 'blog/base.html' %}
 
 {% load static %}
+{% load custom_tags %}
 {% block content %}
 
-<div class="search" style="display: flex;
-    justify-content: end;
-    margin-right: 50px;">
-    <form action="" method="get">
+<div class="search">
+    <form action="{% url 'blog:search_post' %}" method="get" style="display:flex; justify-content: end; margin-right: 50px;">
         <input type="search" name="query">
         <button type="submit">Поиск</button>
     </form>
 </div>
 
-<img src="{% static 'img/photo_1.jpg' %}" width="300px" height="auto">
-
+<div>
+    <form action="{% url 'blog:filter_post' %}" method="get" style="display: flex; justify-content: flex-end; margin-right: 40px;
+    margin-top: 25px;">
+          {{ filter_form.as_p }}
+          <button type="submit">Фильтровать</button>
+    </form>
+</div>
 
 <h1>Главная страница</h1>
-<div class="post-list">
-    {% for post in page_obj %}
-        <div class="post-item">
-            <div class="post-image">
-                {% if post.image %}
-                    <img src="{{ post.image.url }}" width="200px" height="auto">
-                {% else %}
-                    <img src="{% static 'img/no_photo.jpg'%}" width="150px" height="auto">
-                {% endif %}
+{% if page_obj|length == 0 %}
+<h2>По вашему запросу ничего не найдено</h2>
+{% else %}
+    <img src="{% static 'img/photo_1.jpg' %}" width="300px" height="auto">
+    <div class="post-list">
+        {% for post in page_obj %}
+            <div class="post-item">
+                <div class="post-image">
+                    {% if post.image %}
+                        <img src="{{ post.image.url }}" width="200px" height="auto">
+                    {% else %}
+                        <img src="{% static 'img/no_photo.jpg'%}" width="150px" height="auto">
+                    {% endif %}
+                </div>
+                <div class="post-author">
+                    <a href="{% url 'blog:user_posts' user_id=post.author.pk %}">
+                        {{ post.author }}
+                    </a>
+                </div>
+                <div class="post-title">
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                </div>
+                <div class="post-text">
+                    {{ post.text }}
+                </div>
+    <!--            <div class="post-price">-->
+    <!--                {{ post.price }}-->
+    <!--            </div>-->
+                <div class="post-created_at">
+                    {{ post.created_at }}
+                </div>
             </div>
-            <div class="post-author">
-                <a href="{% url 'blog:user_posts' user_id=post.author.pk %}">
-                    {{ post.author }}
-                </a>
-            </div>
-            <div class="post-title">
-                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-            </div>
-            <div class="post-text">
-                {{ post.text }}
-            </div>
-<!--            <div class="post-price">-->
-<!--                {{ post.price }}-->
-<!--            </div>-->
-            <div class="post-created_at">
-                {{ post.created_at }}
-            </div>
-        </div>
-    {% endfor %}
-</div>
+        {% endfor %}
+    </div>
 
-<div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo;&laquo;Первая</a>
-            <a href="?page={{ page_obj.previous_page_number }}">&laquo;Предыдущая</a>
-        {% endif %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="/?page=1">&laquo;&laquo;Первая</a>
+                <a href="/ ?page={{ page_obj.previous_page_number }}">&laquo;Предыдущая</a>
+            {% endif %}
 
-        <span class="current">
-            Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+            <span class="current">
+                Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?{% url_replace request 'page' page_obj.next_page_number %}">Следующая</a>
+                <a href="?page={{ page_obj.paginator.num_page }}">Последняя&raquo</a>
+            {% endif %}
         </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Следующая</a>
-            <a href="?page={{ page_obj.paginator.num_page }}">Последняя&raquo</a>
-        {% endif %}
-    </span>
-</div>
-
+    </div>
 <h3>Сегодня {% now "jS F Y" %}</h3>
+
+{% endif %}
+
 
 {% endblock content %}
