--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,8 +10,8 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family: cursive; background-color: #b261d7">
+  <div class="container-fluid" style="font-family: cursive; background-color: #b261d7">
     <a class="navbar-brand" href="{% url 'blog:index' %}">Главная</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
