--- a/blog/templates/blog/user_info.html
+++ b/blog/templates/blog/user_info.html
@@ -1,16 +1,27 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div style="display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: antiquewhite;
+  ">
 
-<h2>Информация о пользователе {{ user.username }}</h2>
-<hr>
-<div>Логин - {{ user.username }}</div>
-<div>Имя - {{ user.first_name }}</div>
-<div>Фамилия - {{ user.last_name }}</div>
-<div>Эл.почта - {{ user.email }}</div>
-<div>Телефон - {{ user.phone }}</div>
-<hr>
-<div>Дата регистрации - {{ user.date_joined|date:'d-m-Y H:i'}}</div>
+    <h2>Информация о пользователе {{ user.username }}</h2>
+    <hr>
+    <div style="margin-top: 10px; margin-left: 20px; margin-bottom: 20px;">Логин - {{ user.username }}</div>
+    <div>Имя - {{ user.first_name }}</div><br>1`
+    <div>Фамилия - {{ user.last_name }}</div>
+    <div>Эл.почта - {{ user.email }}</div>
+    <div>Телефон - {{ user.phone }}</div>
+    <hr>
+    <div>Дата регистрации - {{ user.date_joined|date:'d-m-Y H:i'}}</div>
+</div>
 
+7777
 
 {% endblock content %}
