--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -1,16 +1,23 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<h2>Удаление объявления</h2>
-<p>Автор - {{ post.author }}</p>
-<p>Заголовок - {{ post.title }}</p>
+<div style="display: flex;
+  justify-content: flex-start;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: antiquewhite;">
+    <h2>Удаление объявления</h2>
+    <p>Автор - {{ post.author }}</p>
+    <p>Заголовок - {{ post.title }}</p>
 
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Удалить объявление</button>
-    <a href="{% url 'blog:index' %}">
-        <button type="button">Отменить</button>
-    </a>
-</form>
-
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit">Удалить объявление</button>
+        <a href="{% url 'blog:index' %}">
+            <button type="button">Отменить</button>
+        </a>
+    </form>
+</div>
 {% endblock content %}
