--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,6 +1,13 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div style="display: flex;
+  justify-content: flex-start;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: antiquewhite;">
 <h2>Редактировать объявление</h2>
 
 <form action="" method="post" enctype="multipart/form-data">
@@ -8,5 +15,5 @@
     {{ form.as_p }}
     <button   type="submit">Изменить объявление</button>
 </form>
-
+</div>
 {% endblock content %}
