--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -1,12 +1,18 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-
-<h2>Смена пароля</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Сменить пароль</button>
-</form>
-
+<div style="display: flex;
+  justify-content: flex-start;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: antiquewhite;">
+    <h2>Смена пароля</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Сменить пароль</button>
+    </form>
+</div>
 {% endblock content %}
