--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,11 +1,20 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<h3>Регистрация пользователя</h3>
-<form method="post">
-    {% csrf_token %}
-    {{ register_form }}
-    <button type="submit">Зарегестрироваться</button>
-</form>
 
+<div style="display: flex;
+  justify-content: flex-start;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  border-radius: 10px;
+  background-color: antiquewhite;">
+
+    <h3>Регистрация пользователя</h3>
+    <form method="post">
+        {% csrf_token %}
+        {{ register_form }}
+        <button type="submit">Зарегестрироваться</button>
+    </form>
+</div>
 {% endblock content %}
