--- a/blog/templates/blog/user_info.html
+++ b/blog/templates/blog/user_info.html
@@ -14,7 +14,7 @@
     <h2>Информация о пользователе {{ user.username }}</h2>
     <hr>
     <div style="margin-top: 10px; margin-left: 20px; margin-bottom: 20px;">Логин - {{ user.username }}</div>
-    <div>Имя - {{ user.first_name }}</div><br>1`
+    <div>Имя - {{ user.first_name }}</div><br>
     <div>Фамилия - {{ user.last_name }}</div>
     <div>Эл.почта - {{ user.email }}</div>
     <div>Телефон - {{ user.phone }}</div>
