--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,8 @@
 
 
 body {
-    background-image: url("../img/spa-2.jpg");
-    background-size: contain;
+    background-image: url("../img/night.jpg");
+    background-size: cover;
 }
 
 .spa-3 {
